# career_finder

./: README.md
Career_Finder/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
Career_Finder/backend/: .dockerignore  Dockerfile  pyproject.toml
Career_Finder/backend/src/: app.py
Career_Finder/backend/src/ai/: extractor.py  gap.py  models.py  prompt_model.py  roadmap.py
Career_Finder/backend/src/db/: connection.py  queries.py
Career_Finder/backend/src/pipeline/: ingest.py  tag.py  transform.py
Career_Finder/backend/src/routers/: analyse.py  chat.py  stats.py
Career_Finder/data/: jobs.db
Career_Finder/data/raw/: jobs_static.json
Career_Finder/frontend/: .env.example  Dockerfile  pyproject.toml
Career_Finder/frontend/src/: app.py
Career_Finder/frontend/src/templates/: index.html  roadmap.html  stats.html
Career_Finder/scripts/: clear_db.py  run_pipeline.py
Career_Finder/tests/: test_pipeline.py
