[project]
name = "career-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "ruff>=0.15.15",
]
